HelloUltraviolet/Fixtures/RejectedSource/FFI/ForeignPostconditionPredicateBindings/Source/Main.uv
//! Rejected FFI specimen for foreign postcondition binding scope.

extern "C" {
    public procedure importedPostcondition(value: i32) -> i32
        |: @foreign_ensures(missing_value == @result)
}
